--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="./images/favicon/site.webmanifest">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -29,11 +33,12 @@
         <div class="info">
           <div class="info__inner">
             <div class="info__search">
-              <input class="info__input" type="text" placeholder="Search Location..." value="">
-              <button class="info__btn"></button>
+              <button class="info__btn info__btn--location"></button>
+              <input class="info__input" type="text" placeholder="Search Location..." value="Kyiv">
+              <button class="info__btn info__btn--search"></button>
             </div>
             <p class="info__text">
-              Weather Details...
+              Weather Details
             </p>
             <div class="info__box">
               <p class="info__descr">
